--- a/BoardBloom/BoardBloom/appsettings.json
+++ b/BoardBloom/BoardBloom/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MDS;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BoardBloom;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContextConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=MDS;Integrated Security=True;Multiple Active Result Sets=True"
   },
   "Logging": {
     "LogLevel": {
