updated files and added views for better ui/ux

--- a/BoardBloom/BoardBloom/BoardBloom.csproj
+++ b/BoardBloom/BoardBloom/BoardBloom.csproj
@@ -29,4 +29,8 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Views\Home\TermsOfService.cshtml" />
+  </ItemGroup>
+
 </Project>
